# bp-std

./: .gitmodules  Cargo.toml  MANIFEST.yml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  codecov.yml  test.yml
derive/: Cargo.toml  README.md  my_changes.diff  taptree_blame.txt
derive/examples/: fra_demo.rs  fra_demo1.rs  fra_demo2.rs  fra_demo3.rs  fra_demo4.rs  fra_demo5.rs  fra_demo_bpcore.rs  fra_demo_rustbitcoin.rs  simple_test.rs
derive/src/: bip43.rs  derive.rs  fra.rs  index.rs  lib.rs  path.rs  satisfy.rs  sign.rs  taptree.rs  xkey.rs  xpub.rs
derive/tests/: fra_actions.rs
descriptors/: Cargo.toml
descriptors/src/: descriptor.rs  factory.rs  lib.rs  multisig.rs  pkh.rs  script.rs  segwit.rs  singlesig.rs  taproot.rs  tr.rs  wpkh.rs
descriptors/src/compiler/: compile.rs  lexer.rs  mod.rs  parser.rs
invoice/: Cargo.toml
invoice/src/: address.rs  amount.rs  base58.rs  factory.rs  lib.rs  network.rs
legacy/: anchor.rs  scripts.rs  serialize.rs  taptree.rs
psbt/: Cargo.toml
psbt/src/: coders.rs  constructor.rs  data.rs  keypair.rs  keys.rs  lib.rs  locktime.rs  maps.rs  mod.rs  scripts.rs  serde_utils.rs  sign.rs  sigtypes.rs  timelocks.rs  v2.rs
psbt/src/csval/: dbc.rs  mmb.rs  mod.rs  mpc.rs  opret.rs  tapret.rs
psbt/tests/: all.base64.psbt  bip174.rs  bip370.rs  bip371.rs  pkh+shWpkh_0.base64.psbt
psbt/tests/valid.tr/: keyonly_in.psbt  keyonly_out.psbt  keyonly_signed.psbt  script_in.psbt  script_out.psbt  script_signed.psbt
psbt/tests/valid.v0/: no_inputs.psbt  no_inputs_outputs.psbt  pkh_outputless.psbt  pkh_sh_wpkh.psbt  pkh_sh_wpkh_outputless.psbt  pkh_signed.psbt  sh_wsh.psbt  unknown_keys.psbt  wsh.psbt  xpubs.psbt
psbt/tests/valid.v2/: all.psbt  all_modifiable.psbt  base.psbt  in_modifiable.psbt  locks.psbt  nseq.psbt  out_modifiable.psbt  sighash_single.psbt  undefined_flag.psbt  updated.psbt
src/: address.rs  chain.rs  derive.rs  descriptors.rs  index.rs  key.rs  lib.rs  main.rs  onchain.rs  path.rs  rbf.rs  signers.rs  wallet.rs  xpub.rs
std/: Cargo.toml
std/src/: address.rs  chain.rs  derive.rs  descriptors.rs  index.rs  key.rs  lib.rs  path.rs  scripts.rs  seq.rs  taptree.rs  timelock.rs  wallet.rs  xpub.rs
