[workspace]
members = ["invoice", "derive", "descriptors", "psbt", "."]
resolver = "2"

[workspace.package]
version = "0.11.0-beta.6"
keywords = ["bitcoin", "wallet", "descriptors", "psbt", "taproot"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://lnp-bp.org"
repository = "https://github.com/BP-WG/bp-wallet"
rust-version = "1.75.0" # Due to descriptors
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.7.0"
bech32 = "0.9.1"
secp256k1 = "0.29.0"
bitcoin_hashes = "0.14.0"  # TODO: Remove and replace with commit_verify
commit_verify = "0.11.0-beta.7"
strict_encoding = "2.7.0-rc.1"
bp-consensus = "0.11.0-beta.7"
bp-core = { version = "0.11.0-beta.7" }
bp-invoice = { version = "0.11.0-beta.6", path = "invoice" }
bp-derive = { version = "0.11.0-beta.6", path = "derive" }
descriptors = { version = "0.11.0-beta.6", path = "descriptors" }
psbt = { version = "0.11.0-beta.6", path = "psbt" }
indexmap = "2.0.0"
serde_crate = { package = "serde", version = "1", features = ["derive"] }

[package]
name = "bp-std"
description = "Modern & lightweight implementation of bitcoin standards without rust-bitcoin/miniscript dependencies"
readme = "README.md"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bpstd"

[dependencies]
amplify = { workspace = true }
secp256k1 = { workspace = true }
bp-consensus = { workspace = true }
bp-core = { workspace = true, optional = true }
bp-invoice = { workspace = true }
bp-derive = { workspace = true }
descriptors = { workspace = true }
psbt = { workspace = true }
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["signers", "client-side-validation", "strict_encoding", "serde"]
signers = ["secp256k1/global-context", "secp256k1/rand-std"]
strict_encoding = ["psbt/strict_encoding"]
client-side-validation = ["bp-core", "psbt/client-side-validation"]
serde = ["serde_crate", "bp-consensus/serde", "bp-invoice/serde", "bp-derive/serde", "descriptors/serde", "psbt/serde"]
