[package]
name = "descriptors"
version = { workspace = true }
description = "Bitcoin descriptors library (part of Bitcoin Protocol stack)"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "descriptors"

[dependencies]
amplify = { workspace = true }
bp-std = { path = "../std" }
indexmap = { workspace = true }

[features]
default = []
