[package]
name = "bp-invoice"
version = { workspace = true }
description = "Invoces with Bitcoin protocol"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "bpinvoice"

[dependencies]
amplify = { workspace = true }
bp-std = { path = "../std" }
indexmap = "2.0.0"
fluent-uri = "0.1.4"
chrono = "0.4.24"
percent-encoding = "2.2.0"

[features]
default = []
