[package]
name = "bp-invoice"
description = "Bitcoin addresses and invoices"
readme = "../README.md"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "invoice"

[dependencies]
amplify = { workspace = true }
commit_verify = { workspace = true }
bech32 = { workspace = true }
bp-consensus = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
all = []
serde = ["dep:serde", "bp-consensus/serde"]
