[package]
name = "psbt"
version = { workspace = true }
description = "Modern, minimalistic & standard-compliant PSBT library"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
amplify = { workspace = true }
commit_verify = { workspace = true, optional = true }
strict_encoding = { workspace = true, optional = true }
bp-core = { workspace = true, optional = true }
bp-derive = { workspace = true }
descriptors = { workspace = true }
indexmap = { workspace = true }
base64 = "0.22.1"
chrono = "0.4.38"
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["serde", "client-side-validation"]
client-side-validation = ["bp-core", "commit_verify", "strict_encoding"]
serde = ["serde_crate", "bp-derive/serde", "indexmap/serde"]
