[package]
name = "bp-std"
version = { workspace = true }
description = "Modern & lightweight implementation of bitcoin standards without rust-bitcoin/miniscript dependencies"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "bp"

[dependencies]
amplify = { workspace = true }
bitcoin_hashes = "0.12.0"
bech32 = { workspace = true }
bp-primitives = { workspace = true }
bp-core = { version = "0.10.9", optional = true }
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["core", "serde"]
core = ["bp-core"]
serde = ["serde_crate", "bp-primitives/serde"]
