[package]
name = "bp-std"
version = { workspace = true }
description = "Modern & lightweight implementation of bitcoin standards without rust-bitcoin/miniscript dependencies"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "bpstd"

[dependencies]
amplify = { workspace = true }
bitcoin_hashes = "0.12.0" # TODO: Remove and replace with commit_verify
bech32 = { workspace = true }
commit_verify = "0.10.5"
bp-primitives = { workspace = true }
bp-core = { version = "0.10.9", optional = true }
indexmap = { workspace = true }
cfg_eval = { version = "0.1.2", optional = true }
serde_crate = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[features]
default = []
all = ["core", "serde"]
core = ["bp-core"]
serde = ["cfg_eval", "serde_crate", "serde_with", "bp-primitives/serde", "bp-core/serde"]
